tests/baselines/reference/typeFromPropertyAssignment31.errors.txt
tests/cases/conformance/salsa/typeFromPropertyAssignment31.ts(12,14): error TS2300: Duplicate identifier 'p6'.
tests/cases/conformance/salsa/typeFromPropertyAssignment31.ts(17,16): error TS2300: Duplicate identifier 'p6'.
tests/cases/conformance/salsa/typeFromPropertyAssignment31.ts(18,16): error TS2451: Cannot redeclare block-scoped variable 'p7'.
tests/cases/conformance/salsa/typeFromPropertyAssignment31.ts(21,14): error TS2451: Cannot redeclare block-scoped variable 'p7'.


==== tests/cases/conformance/salsa/typeFromPropertyAssignment31.ts (4 errors) ====
    function ExpandoMerge(n: number) {
        return n;
    }
    ExpandoMerge.p1 = 111
    ExpandoMerge.m = function(n: number) {
        return n + 1;
    }
    namespace ExpandoMerge {
        export var p2 = 222;
    }
    ExpandoMerge.p4 = 44444; // ok
    ExpandoMerge.p6 = 66666; // error: duplicate
                 ~~
!!! error TS2300: Duplicate identifier 'p6'.
    namespace ExpandoMerge {
        export var p3 = 333;
        export var p4 = 4; // ok
        export var p5 = 5; // ok
        export let p6 = 6; // error: duplicate
                   ~~
!!! error TS2300: Duplicate identifier 'p6'.
        export let p7 = 7; // error: duplicate
                   ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'p7'.
    }
    ExpandoMerge.p5 = 555555; // should be ok
    ExpandoMerge.p7 = 777777; // error: duplicate
                 ~~
!!! error TS2451: Cannot redeclare block-scoped variable 'p7'.
    var n = ExpandoMerge.p1 + ExpandoMerge.p2 + ExpandoMerge.p3 + ExpandoMerge.p4 + ExpandoMerge.p5 + ExpandoMerge.m(12) + ExpandoMerge(1001);
    